--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
   "homepage": "https://github.com/narayank97/webScraper#readme",
   "dependencies": {
     "axios": "^0.19.0",
+    "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "cheerio": "^1.0.0-rc.3",
+    "pg": "^7.17.0",
     "request": "^2.88.0"
   }
 }
